--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,21 @@
     <body>
         <div class="flex flex-col h-screen w-screen">
             <div class="flex flex-row">
-                <h1 class="text-2xl p-4">NodeJS Chat</h1>
-                <input class="p-2 m-2 rounded border" type="text" placeholder="Choose a username..." value="Anonymous" id="usernameTextField"/>
+                <p class="flex-grow m-auto text-gray-500 mx-4" id="roomName"> </p>
+                <button id="audiocallButton" class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">📞 Audiocall</button>
+                <button id="videocallButton" class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">🎥 Videocall</button>
+                <button id="closecallButton" class="rounded px-4 py-2 my-2 mx-4 hover:bg-orange-200 hover:ring-4 transition-all bg-orange-300 hidden">Hangup</button>
             </div>
             <hr/>
-            <div class="m-4 rounded bg-gray-100 flex-grow flex flex-col-reverse overflow-y-scroll" id="timeline"></div>
+            <div id="callSession" class="m-4 flex-grow min-h-0 flex-row flex hidden">
+                <video id="userVideo" class="flex-grow"></video>
+                <video id="peerVideo" class="flex-grow"></video>
+            </div>
+            <div class="m-4 min-h-0 p-2 rounded bg-gray-100 flex-grow flex flex-col-reverse overflow-y-scroll" id="timeline"></div>
             <hr/>
             <form class="flex flex-row" id="sendMessageForm">
                 <input autofocus="true" aria-autocomplete="false" class="p-4 flex-grow" id="messageTextField" type="text" placeholder="Type a message..." />
-                <button class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300" value="Send">Send</button>
+                <button class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">💬 Send</button>
             </form>
         </div>
     </body>
