--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NodeJS Chat</title>
-        <link href="/tailwind.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="flex flex-col h-screen w-screen">
-            <div class="flex flex-row">
-                <p class="flex-grow m-auto text-gray-500 mx-4" id="roomName"> </p>
-                <button id="audiocallButton" class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">📞 Audiocall</button>
-                <button id="videocallButton" class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">🎥 Videocall</button>
-                <button id="closecallButton" class="rounded px-4 py-2 my-2 mx-4 hover:bg-orange-200 hover:ring-4 transition-all bg-orange-300 hidden">Hangup</button>
-            </div>
-            <hr/>
-            <div id="callSession" class="m-4 flex-grow min-h-0 flex-row flex hidden">
-                <video id="userVideo" class="flex-grow"></video>
-                <video id="peerVideo" class="flex-grow"></video>
-            </div>
-            <div class="m-4 min-h-0 p-2 rounded bg-gray-100 flex-grow flex flex-col-reverse overflow-y-scroll" id="timeline"></div>
-            <hr/>
-            <form class="flex flex-row" id="sendMessageForm">
-                <input autofocus="true" aria-autocomplete="false" class="p-4 flex-grow" id="messageTextField" type="text" placeholder="Type a message..." />
-                <button class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">💬 Send</button>
-            </form>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NodeJS Chat</title>
+    <link href="/tailwind.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="flex flex-col h-screen w-screen">
+        <div class="flex flex-row">
+            <p class="flex-grow m-auto text-gray-500 mx-4" id="roomName"> </p>
+            <button id="videocallButton"
+                class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">🎥
+                Videocall</button>
+            <button id="closecallButton"
+                class="rounded px-4 py-2 my-2 mx-4 hover:bg-orange-200 hover:ring-4 transition-all bg-orange-300 hidden">Hangup</button>
         </div>
-    </body>
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
-    <script src="chat.js"></script>
+        <hr />
+        <div id="callSession" class="m-4 flex-grow min-h-0 flex-row flex hidden">
+            <video id="userVideo" class="flex-grow"></video>
+            <video id="peerVideo" class="flex-grow"></video>
+        </div>
+        <div class="m-4 min-h-0 p-2 rounded bg-gray-100 flex-grow flex flex-col-reverse overflow-y-scroll"
+            id="timeline"></div>
+        <hr />
+        <form class="flex flex-row" id="sendMessageForm">
+            <input autofocus="true" aria-autocomplete="false" class="p-4 flex-grow" id="messageTextField" type="text"
+                placeholder="Type a message..." />
+            <button class="rounded px-4 py-2 my-2 mx-4 hover:bg-blue-200 hover:ring-4 transition-all bg-blue-300">💬
+                Send</button>
+        </form>
+    </div>
+</body>
+<script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
+    integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
+    crossorigin="anonymous"></script>
+<script src="chat.js"></script>
+
 </html>
