fix: Mute yourself by default

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         </div>
         <hr />
         <div id="callSession" class="m-4 flex-grow min-h-0 flex-row flex hidden">
-            <video id="userVideo" class="flex-grow"></video>
+            <video id="userVideo" muted="muted" class="flex-grow"></video>
             <video id="peerVideo" class="flex-grow"></video>
         </div>
         <div class="m-4 min-h-0 p-2 rounded bg-gray-100 flex-grow flex flex-col-reverse overflow-y-scroll"
